# VeloQ

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_EN.md  prd.md  project_structure.md  pyproject.toml  requirements.txt  setup.py
config/: veloq.example.ini
core/: CMakeLists.txt
core/include/market_data/: market_data_feed.h
core/include/order/: order_manager.h
core/include/risk/: risk_controller.h
core/include/utils/: config_manager.h  logger.h
core/src/market_data/: market_data_feed.cpp
core/src/order/: order_manager.cpp
core/src/risk/: risk_controller.cpp
core/src/utils/: config_manager.cpp  logger.cpp
examples/: README.md
include/veloq/common/: lockfree_queue.hpp  types.hpp
include/veloq/dashboard/: renderer.hpp
include/veloq/feature_engine/: features.hpp
include/veloq/gateway/: ctp_gateway.hpp
include/veloq/inference/: model.hpp
include/veloq/ipc_bridge/: shared_memory.hpp
python/: __init__.py
python/agents/: base_agent.py
python/api/: models.py
python/api/routers/: backtest.py  market_data.py
python/backtest/: __init__.py  backtest_engine.py  performance_metrics.py
python/bridge/: CMakeLists.txt
python/strategies/: __init__.py
speedquant_lib/agents/: __init__.py  portfolio_optimizer.py
speedquant_lib/api/: __init__.py  app.py
speedquant_lib/api/routers/: agents.py  orders.py  strategies.py
speedquant_lib/bridge/: core_bindings.cpp
speedquant_lib/strategies/: base_strategy.py
speedquant_lib/strategies/templates/: moving_average_strategy.py
src/common/: CMakeLists.txt
src/common/src/: placeholder.cpp
src/dashboard/: CMakeLists.txt
src/dashboard/src/: main.cpp  renderer.cpp
src/feature_engine/: CMakeLists.txt
src/feature_engine/src/: features.cpp
src/gateway/: CMakeLists.txt
src/gateway/src/: ctp_gateway.cpp
src/inference/: CMakeLists.txt
src/inference/src/: model.cpp
src/ipc_bridge/: CMakeLists.txt
src/ipc_bridge/src/: shared_memory.cpp
