[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speedquant"
version = "0.1.0"
description = "High-performance AI-driven quantitative trading system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SpeedQuant Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: C++",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "torch>=1.10.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "redis>=4.0.0",
    "matplotlib>=3.4.0",
    "plotly>=5.3.0",
    "streamlit>=1.0.0",
    "langchain>=0.0.1",
    "pymongo>=4.0.0",
    "influxdb-client>=1.24.0",
    "pyside6>=6.2.0",
    "onnx>=1.10.0",
    "onnxruntime>=1.8.0",
    "beautifulsoup4>=4.10.0",
    "aiohttp>=3.8.0",
    "pytest>=6.2.5",
]

[project.optional-dependencies]
dev = [
    "black>=21.9b0",
    "isort>=5.9.0",
    "mypy>=0.910",
    "pytest>=6.2.5",
    "pytest-cov>=2.12.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
